VERSION: 0.5.0

Known issues:
- Poor code coverage of the PicasaService.
- Provide (OAuth) ability to add comments.

Release notes 0.5.0 (TBA)
- 

Release notes 0.4.5 (1st June 2010)
- Further PicasaService code coverage. 
- Small controller tweaks.
- Album controller JSON / XML feed fix.
- Updated list sortable columns to support ajax requests.

Release notes 0.4.4 (28th May 2010)
- Update to Grails 1.3.1.
- Further PicasaService code coverage.
- Fix for defect GRAILSPLUGINS-2220.

Release notes 0.4.3 (16th May 2010)
- Change PicasaService scope to "session".

Release notes 0.4.2 (16th May 2010)
- Pagination float fix. 
- Fixed tag listing defect.
- Introduction of RSS feed for tag listing.
- Small CSS tweaks.

Release notes 0.4.1 (13th May 2010)
- Update to Grails 1.3.0.
- Introduction of new config property rssManagingEditor.
- Photo RSS now builds a valid W3C feed, including RFC 882 and 3339 dates.
- README update.
- Move TextTagLibTests into package.

Release notes 0.4.0 (9th May 2010)
- Update all controller index methods to point to the album controller's index.
- Introduction of new configuration property to allow control of the tag cache.
- Introduction of PicasaService unit tests.
- Pagination of the photo comments.
- Introduction of new comment pagination configuration.
- Small PicasaService bug fixes and improvements.
- README updates.
- Message property updates.
- Introduction of RSS feed for photo listing.
- Update photo listing to include feed links.

Release notes 0.3.0 (24th April 2010)
- Introduction of the "showPrivateAlbums" and "showPrivatePhotos" config options.
- Update PicasaService to include the ability to configure whether to include private photos and albums.
- README updates.
- Fixed small bug in the album show view.

Release notes 0.2.0 (21st April 2010)
- Small fix to remove tag list div when there are no tags to display.
- Removal of dependency on Spring Security.
- Introduction of the Comment domain class.