@@ -1,7 +1,8 @@
 #Grails Metadata file
-#Tue Jun 01 18:28:08 BST 2010
+#Tue Jun 01 18:32:09 BST 2010
 app.grails.version=1.3.1
 app.name=picasa
 app.version=0.5.0
 plugins.hibernate=1.3.1
+plugins.oauth=0.1
 plugins.tomcat=1.3.1
